// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Collapsible > renders collapsible trigger with hidden content 1`] = `
<DocumentFragment>
  <div
    data-state="closed"
  >
    <button
      aria-controls="radix-_r_0_"
      aria-expanded="false"
      class="btn btn-ghost btn-sm rounded-md"
      data-state="closed"
      type="button"
    >
      Toggle
    </button>
    <div
      data-state="closed"
      hidden=""
      id="radix-_r_0_"
      style=""
    />
  </div>
</DocumentFragment>
`;

exports[`Collapsible > should expand and collapse content 1`] = `
<DocumentFragment>
  <div
    data-state="open"
  >
    <button
      aria-controls="radix-_r_1_"
      aria-expanded="true"
      class="btn btn-ghost btn-sm rounded-md"
      data-state="open"
      type="button"
    >
      Toggle
    </button>
    <div
      data-state="open"
      id="radix-_r_1_"
      style=""
    >
      <div>
        @radix-ui/colors
      </div>
      <div>
        @stitches/react
      </div>
    </div>
  </div>
</DocumentFragment>
`;
